home page user data fatched

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
     padding: 0;
     margin: 0;
 }
+a{
+  text-decoration: none;
+  text-decoration-style: none;
+}
 .regcontainer{
     margin-top: 100px;
     display: flex;
@@ -65,7 +69,117 @@
   top: 19px;
   right: 249px;
 }
-/* .MuiAlert-root{
-  width: 45%;
-  text-align: center;
-} */
+.forgotPassword{
+  background: #2c3275;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.forgotPassword .forgotPasswordBody{
+  background: #fff;
+ padding: 20px;
+ border-radius: 10px;
+}
+
+.forgotPassword .forgotPasswordBody .MuiFormControl-root{
+  width: 100%;
+  margin: 15px 0;
+}
+
+.navbar{
+  width: 100%;
+  height: 100vh;
+
+
+}
+
+.navcontainer{
+  width: 50%;
+  height: 100vh;
+  background: #fff;
+
+}
+
+.navcontainer ul li{
+
+  color: #0f0f0f;
+  margin: 10px 10px;
+  padding: 20px;
+  font-size: 18px;
+
+}
+
+.navcontainer ul li:hover{
+  color: #fff;
+  background: #32375C;
+  margin: 10px 10px;
+  padding: 20px;
+  font-size: 18px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+
+
+
+.navcontainer ul li span{
+
+  margin-left: 10px;
+
+}
+
+.active{
+  
+  color: aqua;
+
+}
+
+.box{
+  padding: 15px;
+  box-sizing: border-box;
+  width: 100%;
+  height: 470px;
+  margin-top: 10px;
+  background: #fff;
+  overflow-y: scroll;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 3px 19px 1px rgba(0,0,0,0.26);
+-moz-box-shadow: 0px 3px 19px 1px rgba(0,0,0,0.26);
+box-shadow: 0px 3px 19px 1px rgba(0,0,0,0.26);
+position: relative;
+
+}
+
+.box .titel{
+  position: sticky;
+  top: 0;
+  left: 0;
+  background: #fff;
+
+}
+
+.list{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 37px;
+  margin: 15px 0;
+  border-bottom: 1px solid #7e7d7d;
+  padding-bottom: 10px;
+}
+
+.list:last-child{
+  border-bottom: 0;
+}
+
+.list img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.titel{
+  display: flex;
+  justify-content: space-between;
+}
